<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMeetingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/add_meeting_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nouvelle_reunion"
                android:textSize="23sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"

                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/objectLyt"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/object"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/objet_de_la_réunion" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/participantsLyt"
                style="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/participant" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/meeting_room_spinner"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="18dp"
                android:backgroundTint="@color/azur"
                android:backgroundTintMode="add"
                android:entries="@array/meeting_room"
                android:scrollbarSize="65dp"
                android:visibility="visible" />


            <TimePicker
                android:id="@+id/timePicker"
                style="@android:style/Widget.Material.Light.TimePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbarStyle="outsideOverlay"
                android:timePickerMode="spinner"
                android:layout_marginTop="18dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/create"
                style="@style/AppTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/azur"
                android:enabled="false"
                android:hint="@string/appbar_scrolling_view_behavior"
                android:text="@string/enregistrer"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

        </LinearLayout>

    </ScrollView>

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:padding="5dp"
        android:contentDescription="@string/retour_arriere" />

</androidx.constraintlayout.widget.ConstraintLayout>